{
    "name": "KeyMouseInputSystem",
    "maps": [
        {
            "name": "Camera",
            "id": "92ae8e4c-37a6-4895-95aa-ec147f5a263c",
            "actions": [
                {
                    "name": "CameraMove",
                    "type": "Value",
                    "id": "301119fd-e4d0-4a62-980f-4a427eb890e4",
                    "expectedControlType": "Vector3",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "3D Vector",
                    "id": "0eb7e3b3-1de9-4ba0-a9de-1dc117f8540a",
                    "path": "3DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CameraMove",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "72071904-d5b1-4d77-9767-0d194c5c8a68",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyMouse",
                    "action": "CameraMove",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "3f732072-c7ef-4b31-8941-fdb5d687d2bd",
                    "path": "<Keyboard>/leftCtrl",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyMouse",
                    "action": "CameraMove",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "a3f34b53-f0cd-4812-bb5f-e89a394c64b0",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyMouse",
                    "action": "CameraMove",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "853da0e0-4ff9-4d82-8759-a9beae7a56ea",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyMouse",
                    "action": "CameraMove",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "forward",
                    "id": "586f2b37-5d94-4c3b-8cb1-3593db88fc16",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyMouse",
                    "action": "CameraMove",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "backward",
                    "id": "17db1626-c3e0-4bdf-b30e-6ff406710fb0",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyMouse",
                    "action": "CameraMove",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        },
        {
            "name": "Charcter",
            "id": "4d073f53-503d-4840-bb08-e58ff2750384",
            "actions": [
                {
                    "name": "MoveAndUpDown",
                    "type": "Value",
                    "id": "e767e943-6646-4af5-88c6-65aaf96451bd",
                    "expectedControlType": "Vector3",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "MoveBooster",
                    "type": "Button",
                    "id": "2937b2dc-7dc2-4336-9391-8be640fdc3dc",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "3D Vector",
                    "id": "72234147-3c07-4a65-af1c-e96c0f2b9a66",
                    "path": "3DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveAndUpDown",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "09b3e2a1-1270-4b67-b127-0df7f2bdfd36",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyMouse",
                    "action": "MoveAndUpDown",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "20f713c0-9fbc-4bd2-bbab-851ccc0fc25a",
                    "path": "<Keyboard>/leftCtrl",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyMouse",
                    "action": "MoveAndUpDown",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "4f7b84fd-3e11-4ddb-b720-515aa346cdc8",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyMouse",
                    "action": "MoveAndUpDown",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "dfd85d3e-1abd-4220-9246-73a19e2a32a8",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyMouse",
                    "action": "MoveAndUpDown",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "forward",
                    "id": "a8442f28-2a86-4edf-9021-878d34e938f4",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyMouse",
                    "action": "MoveAndUpDown",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "backward",
                    "id": "2fa3edf7-038a-4bf1-a6a3-87a725eb95b5",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyMouse",
                    "action": "MoveAndUpDown",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "a20fd8f2-05fb-45a3-b878-08522c4f2be8",
                    "path": "<Keyboard>/leftShift",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyMouse",
                    "action": "MoveBooster",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Mouse",
            "id": "b347af01-c949-48c7-a495-959dafda4fdc",
            "actions": [
                {
                    "name": "MouseLeft",
                    "type": "Value",
                    "id": "68a4222f-d8f3-4abc-86ad-6e6def8658fe",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "c152ef6e-453f-46b3-97fe-139ff26e1ca5",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyMouse",
                    "action": "MouseLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0c7ca4ee-e6c1-4a22-8af7-244c37eb1c8a",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "KeyMouse",
            "bindingGroup": "KeyMouse",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Mouse>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}